fix: Remove align-items property from records-img-text class

--- a/css/files.css
+++ b/css/files.css
@@ -798,7 +798,6 @@ body{
   }
 
   .records-img-text {
-    align-items: center;
     max-width: 100%;
   }
 
